deploy/frontend/app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: webtech-ss2025-youssef-elkettani
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-credentials
      containers:
        - name: frontend
          image: git.mylab.th-luebeck.de:4181/webtech/ss2025/youssef-elkettani/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
