deploy/frontend/smartBite-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbite-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: "smartbite-PLACEHOLDER_PROJECT_ID.edu.k8s.th-luebeck.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend
            port:
              number: 80
  tls:
  - secretName: smartbite-ingress-cert
    hosts: ["smartbite-PLACEHOLDER_PROJECT_ID.edu.k8s.th-luebeck.dev"]
